syntax = "proto3";

package types;

option go_package = "github.com/singerdmx/BulletJournal/protobuf/daemon/grpc/types";
option java_multiple_files = true;
option java_package = "com.bulletjournal.protobuf.daemon.grpc.types";
option java_outer_classname = "SubscribeNotificationProto";

message SubscribeNotification {
  string service_name = 1;
}

message StreamMessage {
  string operation = 1;
  string data = 2;
}